Fix Styling issue on mobile
Slight styling issue on mobile on the index page, works fine now

--- a/css/style.less
+++ b/css/style.less
@@ -106,10 +106,16 @@ header {
 }
 section.movies-section div div, section.characters-section div div {
 	min-height: 400px;
-	// margin-left: 2.5%;
-	// width: 45%;
 }
 
+section.index_page div div {
+	min-height: 200px;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	width: 45%;
+	margin-left: 2%;
+	margin-right: 2%;
+}
 section.movies-section div.row, section.characters-section div.row {
 	padding-left: 2em;
 }
@@ -335,17 +341,12 @@ footer {
 @media screen and (min-width:1000px) {
 
 	header {
-
 		min-height: 700px;
-
 		.header-text {
-
 			transform: translateY(50%);
-
 			img {
 				width: 35%;
 			}
-
 		}
 
 	}
@@ -363,6 +364,11 @@ footer {
 		width: 30%;
 	}
 
+	section.index_page div div {
+		width: 30% !important; 
+		margin-left: 1%;
+		margin-right: 1%;
+	}
 	#characters, #films, #planets, #species, #starships, #vehicles {
 		section:first-of-type>div { 
 			padding: 1em 7em 1em 5em;
